--- a/css/main.css
+++ b/css/main.css
@@ -66,8 +66,15 @@
 
     input[type="radio"] { width: 30px; height: 30px;  cursor: pointer;}
 
-    input:focus { border: 1px solid red; }
 
+
+    input.invalid, textarea.invalid{
+        border: 1px solid red!important;
+    }
+
+    input.valid, textarea.valid{
+        background-color: #c3dda5;
+    }
 
 
 /* ####################################################################################### */
